Mask modifier breaks vertex parenting #80090

Closed
opened 2020-08-25 07:14:37 +02:00 by dev369 · 6 comments

System Information
Operating system: windows 10
Graphics card:

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-08-20 18:28, hash: ce0bcd5fbf
Worked: Never

Using mask modifier on vertices that have an object parented to them breaks vertex parenting
create vertex parenting then mask out the 3 vertices using mask modifier

#80090.blend

**System Information** Operating system: windows 10 Graphics card: **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-08-20 18:28, hash: `ce0bcd5fbf` Worked: Never Using mask modifier on vertices that have an object parented to them breaks vertex parenting create vertex parenting then mask out the 3 vertices using mask modifier [#80090.blend](https://archive.blender.org/developer/F8811573/T80090.blend)
Author

Added subscriber: @dev369

Added subscriber: @dev369

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @mont29

Added subscriber: @mont29

Changed status from 'Confirmed' to: 'Archived'

Changed status from 'Confirmed' to: 'Archived'
Bastien Montagne self-assigned this 2020-08-28 10:50:29 +02:00

There is no bug here, vertex parenting works by index, so if you change topology or number of vertices with your modifiers, you should expect such parenting to be broken.

There is no bug here, vertex parenting works by index, so if you change topology or number of vertices with your modifiers, you should expect such parenting to be broken.
Author

but what is the poi

In #80090#1004164, @mont29 wrote:
There is no bug here, vertex parenting works by index, so if you change topology or number of vertices with your modifiers, you should expect such parenting to be broken.

but what is the point of breaking vertex parenting? in one version it worked with mask modifier then you removed the support so it is not some technical limitation it is your preference. i was using it to parent a custom eyeball to geometry of eyeball from an alembic file, but because i need to make original/parent eyebal invisible and geometry is in parallel and close proximity cycles transparency was not handling it well so mask modifier did the trick.

i dont get it, it would not made anything worse if you left the feature in. it is useful in some cases

but what is the poi > In #80090#1004164, @mont29 wrote: > There is no bug here, vertex parenting works by index, so if you change topology or number of vertices with your modifiers, you should expect such parenting to be broken. but what is the point of breaking vertex parenting? in one version it worked with mask modifier then you removed the support so it is not some technical limitation it is your preference. i was using it to parent a custom eyeball to geometry of eyeball from an alembic file, but because i need to make original/parent eyebal invisible and geometry is in parallel and close proximity cycles transparency was not handling it well so mask modifier did the trick. i dont get it, it would not made anything worse if you left the feature in. it is useful in some cases
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#80090
No description provided.